# musescore-lyrics

./: .gitignore  README.md  musescore-lyrics.spec  pyproject.toml
src/musescore_lyrics/: convertet.py  extract_pptx_text.py  main.py  tools.py
